# SerinDB

./: .gitignore  Cargo.toml  Dockerfile  clippy.toml  deny.toml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: docs.yml  rust.yml
.kiro/specs/rust-database-engine/: design.md  requirements.md  task.md
docs/: book.toml
docs/src/: SUMMARY.md  design.md  introduction.md  requirements.md
observability/alert_rules/: serindb_rules.yml
observability/grafana/: serindb_dashboard.json
samples/: crud_rust.rs
samples/crud_go/: main.go
serin_consistency/: Cargo.toml
serin_consistency/src/: lib.rs
serin_exec/: Cargo.toml
serin_exec/src/: jit.rs  lib.rs
serin_go/: README.md  go.mod
serin_go/driver/: driver.go
serin_graph/: Cargo.toml
serin_graph/src/: lib.rs
serin_index/: Cargo.toml
serin_index/src/: bloom.rs  json_gin.rs  lib.rs  rtree.rs
serin_jdbc/: README.md  build.gradle
serin_jdbc/src/main/java/io/serindb/jdbc/: SerinDriver.java
serin_js/: index.js  package.json
serin_json/: Cargo.toml
serin_json/src/: lib.rs
serin_log/: Cargo.toml
serin_log/src/: lib.rs
serin_meta/: Cargo.toml
serin_meta/src/: lib.rs
serin_metrics/: Cargo.toml
serin_metrics/src/: lib.rs
serin_multidc/: Cargo.toml
serin_multidc/src/: lib.rs
serin_optimizer/: Cargo.toml
serin_optimizer/src/: lib.rs
serin_parser/: Cargo.toml  build.rs
serin_parser/grammar/: SQL.g4
serin_parser/src/: ast.rs  lib.rs  parser.rs  token.rs
serin_pgwire/: Cargo.toml
serin_pgwire/src/: auth.rs  lib.rs
serin_pool/: Cargo.toml
serin_pool/src/: lib.rs
serin_py/: pyproject.toml
serin_py/serin_py/: __init__.py
serin_raft/: Cargo.toml
serin_raft/src/: lib.rs
serin_rebalance/: Cargo.toml
serin_rebalance/src/: lib.rs
serin_rs/: Cargo.toml
serin_rs/src/: lib.rs
serin_shard/: Cargo.toml
serin_shard/src/: lib.rs
serin_storage/: Cargo.toml
serin_storage/src/: buffer.rs  engine.rs  lib.rs  lsm.rs  timeseries.rs  uring.rs  wal.rs
serin_telemetry/: Cargo.toml
serin_telemetry/src/: lib.rs
serin_txn/: Cargo.toml
serin_txn/src/: gtm.rs  lib.rs  lock.rs  txn.rs
serinctl/: Cargo.toml
serinctl/src/: main.rs
serindb/: Cargo.toml
serindb/src/: lib.rs  main.rs
