[package]
name = "serin_consistency"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
porcupine = "0.1"
async-trait = "0.1"
serin_multidc = { path = "../serin_multidc" } 