[package]
name = "serin_exec"
version = "0.1.0"
edition = "2021"
authors = ["SeleniaProject <dev@example.com>"]
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
cranelift-jit = { version = "0.100", optional = true }
cranelift-module = { version = "0.100", optional = true }
cranelift-codegen = { version = "0.100", optional = true }

[features]
jit = ["cranelift-jit", "cranelift-module", "cranelift-codegen"] 