[package]
name = "serin_log"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1"
chrono = "0.4"
flate2 = { version = "1.0" }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio = { version = "1", features = ["fs", "io-util", "rt", "macros"] } 