[package]
name = "serin_meta"
version = "0.1.0"
edition = "2021"
authors = ["SeleniaProject <dev@example.com>"]
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tonic = { version = "0.10", features = ["transport"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openraft = "0.7"
async-trait = "0.1" 