[package]
name = "serin_pgwire"
version = "0.1.0"
edition = "2021"
authors = ["SeleniaProject <dev@example.com>"]
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "1"
anyhow = "1"
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pbkdf2 = "0.11"
rand = "0.8" 
tracing = "0.1" 
serin_metrics = { path = "../serin_metrics" } 