[package]
name = "serin_storage"
version = "0.1.0"
edition = "2021"
authors = ["SeleniaProject <dev@example.com>"]
license = "Apache-2.0"

[dependencies]
crc32c = "0.6"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt", "macros"] }
tokio-uring = { version = "0.4", optional = true }

[features]
uring = ["tokio-uring"] 