[package]
name = "serin_telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12", features = ["tonic", "tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
anyhow = "1" 
tracing-opentelemetry = "0.22" 