[package]
name = "serinctl"
version = "0.1.0"
edition = "2021"
authors = ["SeleniaProject <dev@example.com>"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
rustyline = "12"
serin_parser = { path = "../serin_parser" }
directories = "5"
thiserror = "1" 
serin_shard = { path = "../serin_shard" } 