[package]
name = "serindb"
version = "0.1.0"
edition = "2021"
authors = ["SeleniaProject <dev@example.com>"]
description = "Core library for SerinDB database engine."
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serin_pgwire = { path = "../serin_pgwire" }

[[bin]]
name = "serindb"
path = "src/main.rs" 